user table changes