@@ -1,7 +1,7 @@
 package com.exam.dto;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.stream.Collectors;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -20,8 +20,11 @@ public class UserSecurity implements UserDetails {
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		return Arrays.stream(users.getRoles().split(",")).map(SimpleGrantedAuthority::new).toList();
+	    return users.getRoles().stream()
+	                .map(role -> new SimpleGrantedAuthority(role.getName()))
+	                .collect(Collectors.toList());
 	}
+
 
 	@Override
 	public String getPassword() {
